force-app/main/default/objects/Case/fields/Nomor_Surat_LAPS__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Surat_LAPS__c</fullName>
    <description>Sesuai nomer Surat dari LAPS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nomor Surat LAPS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>