force-app/main/default/objects/Case/fields/Nomor_Tiket__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Tiket__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , IF(ISBLANK(SCC_Legacy_Ticket_ID__c),CaseNumber,SCC_Legacy_Ticket_ID__c), &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nomor Tiket</label>
    <type>Text</type>
</CustomField>