force-app/main/default/objects/Case/fields/Nomor_Token_PLN__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Token_PLN__c</fullName>
    <label>Nomor Token PLN</label>
    <length>70</length>
    <type>Text</type>
</CustomField>