force-app/main/default/objects/Case/fields/Notification_11__c.field-meta.xml
<CustomField>
    <fullName>Notification_11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification 11</label>
    <type>Checkbox</type>
</CustomField>