force-app/main/default/objects/Case/fields/Notification_12__c.field-meta.xml
<CustomField>
    <fullName>Notification_12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification 12</label>
    <type>Checkbox</type>
</CustomField>