force-app/main/default/objects/Case/fields/Notification_13__c.field-meta.xml
<CustomField>
    <fullName>Notification_13__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification 13</label>
    <type>Checkbox</type>
</CustomField>