force-app/main/default/objects/Case/fields/Orgeh__c.field-meta.xml
<CustomField>
    <fullName>Orgeh__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Orgeh</label>
    <length>100</length>
    <type>Text</type>
</CustomField>