force-app/main/default/objects/Case/fields/Over_Agent_OLA__c.field-meta.xml
<CustomField>
    <fullName>Over_Agent_OLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Over Agent OLA</label>
    <type>Checkbox</type>
</CustomField>