force-app/main/default/objects/Case/fields/Over_Level_4_OLA__c.field-meta.xml
<CustomField>
    <fullName>Over_Level_4_OLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Over Level 4 OLA</label>
    <type>Checkbox</type>
</CustomField>