force-app/main/default/objects/Case/fields/Over_SLA_Date__c.field-meta.xml
<CustomField>
    <fullName>Over_SLA_Date__c</fullName>
    <formula>CreatedDate + SCC_Call_Type__r.SCC_Total_SLA__c+1</formula>
    <label>Over SLA Date</label>
    <type>DateTime</type>
</CustomField>