force-app/main/default/objects/Case/fields/Param_Team_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Param_Team_Dashboard__c</fullName>
    <description>Backup: (CreatedBy.Id = $User.Id) || (OwnerId = $User.Id)</description>
    <formula>( CreatedBy.Team_Dashboard__c  = $User.Team_Dashboard__c  ) || ( Owner:User.Team_Dashboard__c    = $User.Team_Dashboard__c  )</formula>
    <label>Param Team Dashboard</label>
    <type>Checkbox</type>
</CustomField>