force-app/main/default/objects/Case/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  ParentId , IF(ISBLANK(ParentId),&apos;&apos;, Parent.Case_Number__c ), &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case</label>
    <type>Text</type>
</CustomField>