force-app/main/default/objects/Case/fields/Pekerjaan_Form_Demo__c.field-meta.xml
<CustomField>
    <fullName>Pekerjaan_Form_Demo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pekerjaan Form</label>
    <length>120</length>
    <type>Text</type>
</CustomField>