force-app/main/default/objects/Case/fields/Pengisian_Form_APPK__c.field-meta.xml
<CustomField>
    <fullName>Pengisian_Form_APPK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for checking appk form</description>
    <label>Pengisian Form APPK</label>
    <type>Checkbox</type>
</CustomField>