force-app/main/default/objects/Case/fields/Penyebab_Pelaporan__c.field-meta.xml
<CustomField>
    <fullName>Penyebab_Pelaporan__c</fullName>
    <label>Penyebab Pelaporan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud Internal</fullName>
            </value>
            <value>
                <fullName>Human Error Kelalaian</fullName>
            </value>
            <value>
                <fullName>Human Error Ketidaktahuan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>