force-app/main/default/objects/Case/fields/Perhitungan_Post__c.field-meta.xml
<CustomField>
    <fullName>Perhitungan_Post__c</fullName>
    <formula>ABS((Date_Time_Answer__c - CreatedDate) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perhitungan Post</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>