force-app/main/default/objects/Case/fields/Perhitungan_Post_Non_ABS__c.field-meta.xml
<CustomField>
    <fullName>Perhitungan_Post_Non_ABS__c</fullName>
    <formula>((Date_Time_Post__c - CreatedDate) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perhitungan Post Non ABS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>