force-app/main/default/objects/Case/fields/Persetujuan_ganti_rugi__c.field-meta.xml
<CustomField>
    <fullName>Persetujuan_ganti_rugi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Persetujuan ganti rugi</label>
    <type>Checkbox</type>
</CustomField>