force-app/main/default/objects/Case/fields/Persetujuan_penolakan_permohonan__c.field-meta.xml
<CustomField>
    <fullName>Persetujuan_penolakan_permohonan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Persetujuan penolakan permohonan</label>
    <type>Checkbox</type>
</CustomField>