force-app/main/default/objects/Case/fields/PIC_APPK__c.field-meta.xml
<CustomField>
    <fullName>PIC_APPK__c</fullName>
    <label>PIC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dena</fullName>
            </value>
            <value>
                <fullName>Dimas Damar Jati</fullName>
            </value>
            <value>
                <fullName>Galih</fullName>
            </value>
            <value>
                <fullName>Icha</fullName>
            </value>
            <value>
                <fullName>Nining</fullName>
            </value>
            <value>
                <fullName>Sidiq</fullName>
            </value>
            <value>
                <fullName>Suci</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>