force-app/main/default/objects/Case/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REGISTERING</fullName>
                <default>true</default>
                <label>REGISTERING</label>
            </value>
            <value>
                <fullName>SURVEY &amp; ESTIMATION</fullName>
            </value>
            <value>
                <fullName>ADJUSTMENT</fullName>
            </value>
            <value>
                <fullName>SETTLEMENT</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>