force-app/main/default/objects/Case/fields/PLL__c.field-meta.xml
<CustomField>
    <fullName>PLL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PLL</label>
    <type>Checkbox</type>
</CustomField>