force-app/main/default/objects/Case/fields/Product_L1__c.field-meta.xml
<CustomField>
    <fullName>Product_L1__c</fullName>
    <description>Consists of the type of 1st level product of the case.</description>
    <label>Product L1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SA</fullName>
                <label>Savings</label>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Treasury</fullName>
            </value>
            <value>
                <fullName>Trade Finance</fullName>
            </value>
            <value>
                <fullName>Transaction Banking</fullName>
            </value>
            <value>
                <fullName>SDB</fullName>
            </value>
            <value>
                <fullName>Merchant Solutions</fullName>
            </value>
            <value>
                <fullName>Layanan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>