force-app/main/default/objects/Case/fields/Progress_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Progress_Ticket__c</fullName>
    <description>This field is used by Back Office Agent for stating that this Ticket is already worked before getting closed in 2 days.</description>
    <inlineHelpText>Field ini digunakan untuk Agent Back Office menandai Ticket yang sudah dikerjakan sebelum di-Close dalam 2 hari.</inlineHelpText>
    <label>Progress Ticket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belum Dikerjakan</fullName>
            </value>
            <value>
                <fullName>Sedang Dikerjakan</fullName>
            </value>
            <value>
                <fullName>Sudah Dikerjakan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>