force-app/main/default/objects/Case/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Province</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>