force-app/main/default/objects/Case/fields/push_notif_CIA_isNew__c.field-meta.xml
<CustomField>
    <fullName>push_notif_CIA_isNew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for checked if the notification hit once if status new</description>
    <label>push_notif_CIA_isNew</label>
    <type>Checkbox</type>
</CustomField>