force-app/main/default/objects/Case/fields/Putusan_Mediasi__c.field-meta.xml
<CustomField>
    <fullName>Putusan_Mediasi__c</fullName>
    <label>Putusan Mediasi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belum ada putusan</fullName>
            </value>
            <value>
                <fullName>Sepakat</fullName>
            </value>
            <value>
                <fullName>Sepakat tidak sepakat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>