force-app/main/default/objects/Case/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <formula>LEFT(Region__c, FIND(&quot; &quot;, Region__c &amp; &quot; &quot;) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Code</label>
    <type>Text</type>
</CustomField>