force-app/main/default/objects/Case/fields/Region_Description__c.field-meta.xml
<CustomField>
    <fullName>Region_Description__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Region_Name__c)), 
    Region_Name__c,
    IF(
        NOT(ISBLANK(Region__c)),
        Region__c,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Description</label>
    <type>Text</type>
</CustomField>