force-app/main/default/objects/Case/fields/Relation_with_The_Insured__c.field-meta.xml
<CustomField>
    <fullName>Relation_with_The_Insured__c</fullName>
    <label>Relation with The Insured</label>
    <length>100</length>
    <type>Text</type>
</CustomField>