force-app/main/default/objects/Case/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>