force-app/main/default/objects/Case/fields/Reopen_ITSM_Tiket__c.field-meta.xml
<CustomField>
    <fullName>Reopen_ITSM_Tiket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reopen ITSM Tiket</label>
    <type>Checkbox</type>
</CustomField>