force-app/main/default/objects/Case/fields/Report_By__c.field-meta.xml
<CustomField>
    <fullName>Report_By__c</fullName>
    <label>Report By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>