force-app/main/default/objects/Case/fields/Reported_Email__c.field-meta.xml
<CustomField>
    <fullName>Reported_Email__c</fullName>
    <label>Reported Email</label>
    <type>Email</type>
</CustomField>