force-app/main/default/objects/Case/fields/Reported_Loss_Object__c.field-meta.xml
<CustomField>
    <fullName>Reported_Loss_Object__c</fullName>
    <label>Reported Loss Object</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>