force-app/main/default/objects/Case/fields/Reported_Phone_Area__c.field-meta.xml
<CustomField>
    <fullName>Reported_Phone_Area__c</fullName>
    <label>Reported Phone Area</label>
    <type>Phone</type>
</CustomField>