force-app/main/default/objects/Case/fields/Response_Time_Minutes_v2__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Minutes_v2__c</fullName>
    <formula>(Date_Time_Answer__c -  CreatedDate)*24*60</formula>
    <label>Response Time (Minutes) v2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>