force-app/main/default/objects/Case/fields/Response_Time_Second__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Second__c</fullName>
    <formula>(Date_Time_Answer__c - CreatedDate) * 24 * 60 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time (Second)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>