force-app/main/default/objects/Case/fields/Response_Time_Second_V2__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Second_V2__c</fullName>
    <formula>ROUND((Date_Time_Answer__c - CreatedDate) * 24 * 60 * 60, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time (Second) V2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>