force-app/main/default/objects/Case/fields/Return_TicketSCC_Return_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Return_TicketSCC_Return_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Ticket?</label>
    <type>Checkbox</type>
</CustomField>