force-app/main/default/objects/Case/fields/Returned_Case__c.field-meta.xml
<CustomField>
    <fullName>Returned_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field Indicates that case is been returned to its Initial case owner</description>
    <label>Returned Case</label>
    <type>Checkbox</type>
</CustomField>