force-app/main/default/objects/Case/fields/RPA__c.field-meta.xml
<CustomField>
    <fullName>RPA__c</fullName>
    <formula>TEXT(Origin) = &apos;Sabrina&apos; || TEXT(Origin) = &apos;Senyum&apos; || TEXT(Origin) = &apos;MMS&apos; || TEXT(Origin) = &apos;BRIMO&apos; || TEXT(Origin) = &apos;BRILINK&apos; || TEXT(Origin) = &apos;CERIA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RPA</label>
    <type>Checkbox</type>
</CustomField>