force-app/main/default/objects/Case/fields/RT_RW_Form__c.field-meta.xml
<CustomField>
    <fullName>RT_RW_Form__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RT/RW Form</label>
    <length>120</length>
    <type>Text</type>
</CustomField>