force-app/main/default/objects/Case/fields/RunningWaitingDocument__c.field-meta.xml
<CustomField>
    <fullName>RunningWaitingDocument__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RunningWaitingDocument</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>