force-app/main/default/objects/Case/fields/SCC_Account_No_Destination__c.field-meta.xml
<CustomField>
    <fullName>SCC_Account_No_Destination__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account No. Destination</label>
    <length>100</length>
    <type>Text</type>
</CustomField>