force-app/main/default/objects/Case/fields/SCC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SCC_Account_Number__c</fullName>
    <description>Migration.The account number or credit card number</description>
    <label>Nomor Rekening</label>
    <length>30</length>
    <type>Text</type>
</CustomField>