force-app/main/default/objects/Case/fields/SCC_Amount__c.field-meta.xml
<CustomField>
    <fullName>SCC_Amount__c</fullName>
    <description>The amount from the dispute transaction</description>
    <label>Nominal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>