force-app/main/default/objects/Case/fields/SCC_AnalisaSkils__c.field-meta.xml
<CustomField>
    <fullName>SCC_AnalisaSkils__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AnalisaSkils</label>
    <length>255</length>
    <type>Text</type>
</CustomField>