force-app/main/default/objects/Case/fields/SCC_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>SCC_Approved_By__c</fullName>
    <label>Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>