force-app/main/default/objects/Case/fields/SCC_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>SCC_Assigned_Date__c</fullName>
    <description>For migration only. It is the date time when case is assigned to the case owner.</description>
    <label>Tgl Assigned</label>
    <type>DateTime</type>
</CustomField>