force-app/main/default/objects/Case/fields/SCC_Assignee__c.field-meta.xml
<CustomField>
    <fullName>SCC_Assignee__c</fullName>
    <description>For migration only. It&apos;s PN + Name of the agent</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>