force-app/main/default/objects/Case/fields/SCC_Attachment__c.field-meta.xml
<CustomField>
    <fullName>SCC_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachment?</label>
    <type>Checkbox</type>
</CustomField>