force-app/main/default/objects/Case/fields/SCC_Attachment_Done_Date__c.field-meta.xml
<CustomField>
    <fullName>SCC_Attachment_Done_Date__c</fullName>
    <description>The date of attachment has been collected</description>
    <label>Tanggal Attachment Done</label>
    <type>Date</type>
</CustomField>