force-app/main/default/objects/Case/fields/SCC_AttachmentDone__c.field-meta.xml
<CustomField>
    <fullName>SCC_AttachmentDone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For migration only. To mark the case has attachment or no.</description>
    <label>Attachment Done</label>
    <type>Checkbox</type>
</CustomField>