force-app/main/default/objects/Case/fields/SCC_Bank_BRI__c.field-meta.xml
<CustomField>
    <fullName>SCC_Bank_BRI__c</fullName>
    <label>Bank BRI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>