force-app/main/default/objects/Case/fields/SCC_Bersedia_di_survey__c.field-meta.xml
<CustomField>
    <fullName>SCC_Bersedia_di_survey__c</fullName>
    <label>Bersedia di-survey?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ya</fullName>
            </value>
            <value>
                <fullName>Tidak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>