force-app/main/default/objects/Case/fields/SCC_Biaya_Admin__c.field-meta.xml
<CustomField>
    <fullName>SCC_Biaya_Admin__c</fullName>
    <label>Biaya Admin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>