force-app/main/default/objects/Case/fields/scc_Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>scc_Billing_Number__c</fullName>
    <label>Billing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>