force-app/main/default/objects/Case/fields/SCC_Branch_Unit__c.field-meta.xml
<CustomField>
    <fullName>SCC_Branch_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To Use as a look up on case detail page , and users having edit access will able to edit it</description>
    <label>Branch Unit</label>
    <referenceTo>BranchUnit</referenceTo>
    <relationshipLabel>Branch Unit</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>