force-app/main/default/objects/Case/fields/SCC_BRINotif_reffNumber__c.field-meta.xml
<CustomField>
    <fullName>SCC_BRINotif_reffNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Result Whatsapp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>