force-app/main/default/objects/Case/fields/SCC_Brizzi_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>SCC_Brizzi_Card_Number__c</fullName>
    <label>Nomor Kartu Brizzi</label>
    <length>30</length>
    <type>Text</type>
</CustomField>