force-app/main/default/objects/Case/fields/SCC_Bunga__c.field-meta.xml
<CustomField>
    <fullName>SCC_Bunga__c</fullName>
    <label>Bunga</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>