force-app/main/default/objects/Case/fields/SCC_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>SCC_Call_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Type Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SSC_Call_Type__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SSC_Call_Type__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>