force-app/main/default/objects/Case/fields/SCC_Call_Type_Feature__c.field-meta.xml
<CustomField>
    <fullName>SCC_Call_Type_Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Type Feature</label>
    <referenceTo>SCC_Call_Type_Feature__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>