force-app/main/default/objects/Case/fields/SCC_Call_Type_Total_OLA__c.field-meta.xml
<CustomField>
    <fullName>SCC_Call_Type_Total_OLA__c</fullName>
    <label>Total BO OLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>