force-app/main/default/objects/Case/fields/SCC_Cancel_reasons__c.field-meta.xml
<CustomField>
    <fullName>SCC_Cancel_reasons__c</fullName>
    <description>This field identifies the reason for Cancellation.</description>
    <label>Alasan Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tidak termasuk jenis pengaduan.</fullName>
            </value>
            <value>
                <fullName>Lainnya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>