force-app/main/default/objects/Case/fields/SCC_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>SCC_Card_Number__c</fullName>
    <label>Nomor Kartu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>