force-app/main/default/objects/Case/fields/SCC_Case_Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case_Age_in_Days__c</fullName>
    <description>Case Age in Days</description>
    <formula>IF (IsClosed,ClosedDate - CreatedDate,NOW() - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>