force-app/main/default/objects/Case/fields/SCC_Case_Age_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case_Age_in_Hours__c</fullName>
    <description>Case Age in Hours</description>
    <formula>IF( IsClosed , (ClosedDate - CreatedDate) *24, (NOW() - CreatedDate ) *24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>