force-app/main/default/objects/Case/fields/SCC_Case_Age_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case_Age_in_Minutes__c</fullName>
    <description>Case Age in Minutes</description>
    <formula>IF( IsClosed , (ClosedDate - CreatedDate) *1440, (NOW() - CreatedDate ) *1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age in Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>