force-app/main/default/objects/Case/fields/SCC_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case_Owner__c</fullName>
    <formula>IF(
    LEFT(OwnerId, 3) = &quot;00G&quot;, 
         Owner:Queue.QueueName , 
    Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>