force-app/main/default/objects/Case/fields/SCC_Case_Type_assigned_time__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case_Type_assigned_time__c</fullName>
    <description>The purpose of this field is to get date and time when case type is assigned to case</description>
    <label>Case Type assigned time</label>
    <type>DateTime</type>
</CustomField>