force-app/main/default/objects/Case/fields/SCC_Case_Type_for_Suggested_Article__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case_Type_for_Suggested_Article__c</fullName>
    <formula>SCC_Call_Type__r.Name</formula>
    <label>Case Type for Suggested Article</label>
    <type>Text</type>
</CustomField>