force-app/main/default/objects/Case/fields/SCC_Channel_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>SCC_Channel_Transaksi__c</fullName>
    <description>This field is used to capture Channel Transaksi (Transaction Channel) information on case.</description>
    <label>Channel Transaksi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDC BRI</fullName>
            </value>
            <value>
                <fullName>EDC Bank Lain</fullName>
            </value>
            <value>
                <fullName>ATM / CRM BRI</fullName>
            </value>
            <value>
                <fullName>ATM Bank Lain</fullName>
            </value>
            <value>
                <fullName>QRIS BRI</fullName>
            </value>
            <value>
                <fullName>QRIS Bank Lain</fullName>
            </value>
            <value>
                <fullName>BRIMO</fullName>
            </value>
            <value>
                <fullName>CERIA</fullName>
            </value>
            <value>
                <fullName>BRI Credit Card Mobile</fullName>
            </value>
            <value>
                <fullName>Branch / Kantor BRI</fullName>
            </value>
            <value>
                <fullName>IBBIZ</fullName>
            </value>
            <value>
                <fullName>QLOLA</fullName>
            </value>
            <value>
                <fullName>Agen BRILink</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Non channel</fullName>
            </value>
            <value>
                <fullName>RPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>