force-app/main/default/objects/Case/fields/SCC_Cicilan__c.field-meta.xml
<CustomField>
    <fullName>SCC_Cicilan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cicilan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>