force-app/main/default/objects/Case/fields/SCC_Closure_Comments__c.field-meta.xml
<CustomField>
    <fullName>SCC_Closure_Comments__c</fullName>
    <description>Contains a brief description of the Case resolution or why the Case should be closed</description>
    <label>Keterangan Closing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>